<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="cc.kafuu.bilidownload.viewmodel.dialog.BiliPartViewModel" />

        <import type="cc.kafuu.bilidownload.common.utils.ViewDataBindingUtilsKt" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/shape_dialog_background"
            android:orientation="vertical"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_part_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxLines="1"
                android:ellipsize="end"
                bindSpannable="@{viewModel.titleLiveData}"
                android:textColor="@color/primary_color"
                android:textStyle="bold"
                tools:text="@string/app_name" />

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        bindVisible="@{!viewModel.videoResourcesLiveData.empty}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_video"
                        android:textColor="@color/text_default_color" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_video_select_list"
                        bindDataList="@{viewModel.videoResourcesLiveData}"
                        bindVisible="@{!viewModel.videoResourcesLiveData.empty}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <androidx.appcompat.widget.AppCompatTextView
                        bindVisible="@{!viewModel.audioResourcesLiveData.empty}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_audio"
                        android:textColor="@color/text_default_color" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_audio_select_list"
                        bindDataList="@{viewModel.audioResourcesLiveData}"
                        bindVisible="@{!viewModel.audioResourcesLiveData.empty}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </androidx.core.widget.NestedScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end|center_vertical"
                android:orientation="horizontal"
                android:padding="10dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_button_cancel"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:onClick="@{() -> viewModel.onClose()}"
                    android:paddingHorizontal="30dp"
                    android:paddingVertical="10dp"
                    android:text="@string/text_cancel"
                    android:textColor="@color/white" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:background="@drawable/shape_button_general"
                    android:enabled="@{viewModel.currentVideoResourceLiveData != null || viewModel.currentAudioResourceLiveData != null}"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:onClick="@{() -> viewModel.onConfirm()}"
                    android:paddingHorizontal="30dp"
                    android:paddingVertical="10dp"
                    android:text="@string/text_confirm"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>