<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="cc.kafuu.bilidownload.viewmodel.activity.SearchViewModel" />

        <import type="cc.kafuu.bilidownload.common.utils.ViewDataBindingUtilsKt" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minHeight="50dp"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp"
            android:paddingVertical="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/iv_back_content_description"
                android:onClick="@{()->viewModel.finishActivity()}"
                app:srcCompat="@drawable/ic_arrow_back_2" />

            <EditText
                android:id="@+id/et_search_content"
                bindOnEditorAction="@{()->viewModel.onSearch()}"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autofillHints="none"
                android:background="@drawable/ic_shape_search_bg"
                android:drawableStart="@drawable/ic_search"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center_vertical"
                android:hint="@string/et_search_hint"
                android:imeOptions="actionSearch"
                android:inputType="text|textNoSuggestions"
                android:paddingHorizontal="5dp"
                android:text="@={viewModel.searchContextLiveData}"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{()->viewModel.onSearch()}"
                android:padding="5dp"
                android:text="@string/tv_search_text"
                android:textColor="@color/primary_color" />

        </LinearLayout>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fv_fragment"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>